Concurrency safety for overlap checks TimeRange must follow timeslots + booking rules Global exception handling + proper HTTP status codes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=Room Booking System
-# Database configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/room_booking
+spring.datasource.username=room_booking
+spring.datasource.password=room_booking
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
-spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=update
