--- a/pom.xml
+++ b/pom.xml
@@ -62,10 +62,9 @@
             <groupId>org.jmolecules</groupId>
             <artifactId>jmolecules-ddd</artifactId>
         </dependency>
-
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
         <dependency>
